--- a/src/Symfony/Component/Security/Core/Resources/translations/security.fr.xlf
+++ b/src/Symfony/Component/Security/Core/Resources/translations/security.fr.xlf
@@ -70,6 +70,10 @@
                 <source>Invalid or expired login link.</source>
                 <target>Lien de connexion invalide ou expiré.</target>
             </trans-unit>
+            <trans-unit id="19">
+                <source>Too many failed login attempts, please try again in %minutes% minutes.</source>
+                <target>Plusieurs tentatives de connexion ont échoué, veuillez réessayer dans %minutes% minutes.</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
